--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <title>The Raven</title>
   </head>
   <body>
+  <div class="max-screen">
+    This adaptation was meant to be projected in the computer
+  </div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
